Se crea componente para visualizar lista de empleados Se crea componente para visualizar el detalle de un usuario Se instala angular material

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,10 +1,13 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
-  <a class="navbar-brand" href="/">Test for Team International</a>
+  <a class="navbar-brand white">Test for Team International</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">About</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
+      <a (click)="Employees()"
+         [class.active]="router.url == '/employees'"
+         class="nav-item nav-link link active" >Employees</a>
+      <a (click)="SomeUser()"
+         [class.active]="router.url == '/some-user'"
+         class="nav-item nav-link link">Some user</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
