--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 /* Master Styles */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.link {
+  cursor: pointer;
+}
