--- a/src/app/ui/employees/employees.component.html
+++ b/src/app/ui/employees/employees.component.html
@@ -11,39 +11,62 @@
         <button mat-button *ngIf="dataSource.filter" matSuffix mat-icon-button aria-label="Clear" (click)="cleanFilter()">
           <mat-icon>close</mat-icon>
         </button>
-        <i matPrefix class="fa fa-search fa-lg search "></i>
+        <i matPrefix class="fa fa-search fa-lg search"></i>
       </mat-form-field>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table-striped">
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name <br /> (job title)</th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} <br /> Prueba </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header name">Name <br /> (job title)</th>
+        <td mat-cell *matCellDef="let element" class="name"> {{element.name}} <br /> Prueba </td>
       </ng-container>
 
       <!-- Position Column -->
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header age"> Age </th>
+        <td mat-cell *matCellDef="let element" class="age"> {{element.position}} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header user-name"> Username </th>
+        <td mat-cell *matCellDef="let element" class="user-name"> {{element.weight}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hire Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header hire-date"> Hire Date </th>
+        <td mat-cell *matCellDef="let element" class="hire-date"> {{element.symbol}} </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="table-header actions"> </th>
+        <td mat-cell *matCellDef="let element" class="actions">
+
+          <i class="fa fa-pencil action link"></i>
+          <i class="fa fa-eye action link"></i>
+          <i class="fa fa-trash-o action link"></i>
+
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+
+
+    <div class="buttons">
+      <button mat-stroked-button>
+        <i class="fa fa-plus action"></i>
+        Add new employee
+      </button>
+    </div>
+
+
 
 
   </div>
