--- a/src/app/ui/employees/employees.component.html
+++ b/src/app/ui/employees/employees.component.html
@@ -15,11 +15,21 @@
       </mat-form-field>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table-striped">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table-striped" align="left">
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header name">Name <br /> (job title)</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header name">
+          <div class="name-text">
+            <ng-container>
+              Name
+            </ng-container>
+            <br />
+            <ng-container>
+              (job title)
+            </ng-container>
+          </div>
+        </th>
         <td mat-cell *matCellDef="let element" class="name"> {{element.name}} <br /> Prueba </td>
       </ng-container>
 
@@ -46,9 +56,9 @@
         <th mat-header-cell *matHeaderCellDef class="table-header actions"> </th>
         <td mat-cell *matCellDef="let element" class="actions">
 
-          <i class="fa fa-pencil action link"></i>
-          <i class="fa fa-eye action link"></i>
-          <i class="fa fa-trash-o action link"></i>
+          <i class="fa fa-pencil action link" matTooltip="Edit"></i>
+          <i class="fa fa-eye action link" matTooltip="View"></i>
+          <i class="fa fa-trash-o action link" matTooltip="Delete"></i>
 
         </td>
       </ng-container>
