--- a/src/app/ui/employees/employees.component.html
+++ b/src/app/ui/employees/employees.component.html
@@ -30,36 +30,38 @@
             </ng-container>
           </div>
         </th>
-        <td mat-cell *matCellDef="let element" class="name"> {{element.name}} <br /> Prueba </td>
+        <td mat-cell *matCellDef="let element" class="name">
+          {{element.name}}
+          <br />
+          {{element.jobTitle.name}}
+        </td>
       </ng-container>
 
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
+      <!-- Age Column -->
+      <ng-container matColumnDef="age">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header age"> Age </th>
-        <td mat-cell *matCellDef="let element" class="age"> {{element.position}} </td>
+        <td mat-cell *matCellDef="let element" class="age"> {{element.age}} </td>
       </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
+      <!-- Username Column -->
+      <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header user-name"> Username </th>
-        <td mat-cell *matCellDef="let element" class="user-name"> {{element.weight}} </td>
+        <td mat-cell *matCellDef="let element" class="user-name"> {{element.username}} </td>
       </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
+      <!-- Hire Date Column -->
+      <ng-container matColumnDef="hireDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header hire-date"> Hire Date </th>
-        <td mat-cell *matCellDef="let element" class="hire-date"> {{element.symbol}} </td>
+        <td mat-cell *matCellDef="let element" class="hire-date"> {{element.hireDate | date:'yyyy/M/d'}} </td>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="table-header actions"> </th>
         <td mat-cell *matCellDef="let element" class="actions">
-
-          <i class="fa fa-pencil action link" matTooltip="Edit"></i>
-          <i class="fa fa-eye action link" matTooltip="View"></i>
+          <i (click)="edit(element.id)" class="fa fa-pencil action link" matTooltip="Edit"></i>
+          <i (click)="view(element.id)" class="fa fa-eye action link" matTooltip="View"></i>
           <i class="fa fa-trash-o action link" matTooltip="Delete"></i>
-
         </td>
       </ng-container>
 
@@ -70,7 +72,7 @@
 
 
     <div class="buttons">
-      <button mat-stroked-button>
+      <button (click)="add()" mat-stroked-button>
         <i class="fa fa-plus action"></i>
         Add new employee
       </button>
