--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* Master Styles */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 .link {
   cursor: pointer;
@@ -9,4 +9,9 @@
 
 .action {
   margin: 10px;
+}
+
+.button {
+  margin-right: 10px !important;
+  margin-left: 10px !important;
 }
