--- a/src/app/ui/some-user/some-user.component.css
+++ b/src/app/ui/some-user/some-user.component.css
@@ -24,15 +24,15 @@
   margin-top: 50px;
 }
 
-.button {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
 .status {
   margin-top: 10px;
+  color: rgb(152, 152, 152);
 }
 
+
+.title {
+  margin-bottom: 20px;
+}
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 
