Se avanza con el desarrollo, se crean validaciones, se realizan pruebas.

--- a/src/app/ui/some-user/some-user.component.html
+++ b/src/app/ui/some-user/some-user.component.html
@@ -1,157 +1,145 @@
-<div class="container">
-  <div class="row">
-    <!--<form [formGroup]="userForm" (ngSubmit)="save()">-->
-      <div class="col-md-12 title">
-        <h3 *ngIf="view == views.new">New employee</h3>
-        <h3 *ngIf="view == views.edit">Editing: {{currentEmployee?.name}}</h3>
-        <h3 *ngIf="view == views.view">Viewing: {{currentEmployee?.name}}</h3>
-      </div>
-      <div class="col-md-12">
-        <div class="row col-md-9 col-md-offset-5">
+<div class="row">
+  <form [formGroup]="userForm" (ngSubmit)="save()" class="form">
+    <div class="col-md-12 title">
+      <h3 *ngIf="view == views.new">New employee</h3>
+      <h3 *ngIf="view == views.edit">Editing: {{currentEmployee?.name}}</h3>
+      <h3 *ngIf="view == views.view">Viewing: {{currentEmployee?.name}}</h3>
+    </div>
+    <div class="col-md-12">
+      <div class="row col-md-9 col-md-offset-5">
 
-          <div class="col-md-6 inputs-container">
-            <mat-form-field>
-              <input matInput
-                     [ngModel]="currentEmployee?.name"
-                     (ngModelChange)="currentEmployee.name = $event"
-                     [disabled]="view == views.view"
-                
-                     name="name"
-                     placeholder="Name">
-                   <!--formControlName="nameFormControl"-->
+        <div class="col-md-6 inputs-container">
 
-              <!--<mat-error  *ngIf="f.nameFormControl.invalid">
-                Name is <strong>required</strong>
-              </mat-error>-->
-            </mat-form-field>
+          <mat-form-field>
+            <input matInput
+                   [ngModel]="currentEmployee?.name"
+                   (ngModelChange)="currentEmployee.name = $event"
+                   name="name"
+                   formControlName="nameFormControl"
+                   placeholder="Name">
+            <mat-error *ngIf="nameFormControl.invalid">
+              Name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
 
-            <mat-form-field>
-              <input matInput
-                     [ngModel]="currentEmployee?.dob"
-                     (ngModelChange)="currentEmployee.dob = $event"
-                     [matDatepicker]="pickerDob"
-                     [disabled]="view == views.view"
-                     
-                     name="dob"
-                     placeholder="Dob">
-              <!--formControlName="dobFormControl"-->
-              <!--<mat-error *ngIf="f.dobFormControl.invalid">
-                Dob is <strong>required</strong>
-              </mat-error>-->
-              <mat-datepicker-toggle matSuffix [for]="pickerDob"></mat-datepicker-toggle>
-              <mat-datepicker #pickerDob></mat-datepicker>
-            </mat-form-field>
+          <mat-form-field>
+            <input matInput
+                   [ngModel]="currentEmployee?.dob"
+                   (ngModelChange)="currentEmployee.dob = $event"
+                   [matDatepicker]="pickerDob"
+                   name="dob"
+                   formControlName="dobFormControl"
+                   [max]="maxDob"
+                   placeholder="Dob">
+            <mat-error *ngIf="dobFormControl.invalid">
+              Dob is <strong>required</strong>
+            </mat-error>
+            <mat-datepicker-toggle matSuffix [for]="pickerDob"></mat-datepicker-toggle>
+            <mat-datepicker #pickerDob></mat-datepicker>
+          </mat-form-field>
 
-            <mat-form-field>
-              <mat-select [ngModel]="currentEmployee?.country"
-                          (ngModelChange)="currentEmployee.country = $event"
-                          [disabled]="view == views.view"
-                          
-                          name="country"
-                          placeholder="Country">
-                <mat-option *ngFor="let country of countries" [value]="country">
-                  {{country.name}}
-                </mat-option>
-              </mat-select>
-              <!--formControlName="countryFormControl"-->
-              <!--<mat-error *ngIf="f.countryFormControl.invalid">
-                Country is <strong>required</strong>
-              </mat-error>-->
-            </mat-form-field>
+          <mat-form-field>
+            <mat-select [ngModel]="currentEmployee?.country"
+                        (ngModelChange)="currentEmployee.country = $event"
+                        name="country"
+                        formControlName="countryFormControl"
+                        placeholder="Country">
+              <mat-option *ngFor="let country of countries" [value]="country">
+                {{country.name}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="countryFormControl.invalid">
+              Country is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
 
-            <mat-form-field>
-              <input matInput
-                     [ngModel]="currentEmployee?.username"
-                     (ngModelChange)="currentEmployee.username = $event"
-                     [disabled]="view == views.view"
-                     
-                     name="username"
-                     placeholder="Username">
-              <!--formControlName="usernameFormControl"-->
-              <!--<mat-error *ngIf="f.usernameFormControl.invalid">
-                Username is <strong>required</strong>
-              </mat-error>-->
-            </mat-form-field>
+          <mat-form-field>
+            <input matInput
+                   [ngModel]="currentEmployee?.username"
+                   (ngModelChange)="currentEmployee.username = $event"
+                   name="username"
+                   formControlName="usernameFormControl"
+                   placeholder="Username">
+            <mat-error *ngIf="usernameFormControl.errors?.required">
+              Username is <strong>required</strong>
+            </mat-error>
+            <mat-error *ngIf="usernameFormControl.errors?.pattern">
+              Username not valid
+            </mat-error>
+          </mat-form-field>
 
-            <mat-form-field>
-              <input matInput
-                     [ngModel]="currentEmployee?.hireDate"
-                     (ngModelChange)="currentEmployee.hireDate = $event"
-                     [matDatepicker]="pickerHireDate"
-                     [disabled]="view == views.view"
-                     
-                     name="hireDate"
-                     placeholder="Hire Date">
-              <!--formControlName="hireDateFormControl"-->
-              <!--<mat-error *ngIf="f.hireDateFormControl.invalid">
-                Hire Date is <strong>required</strong>
-              </mat-error>-->
-              <mat-datepicker-toggle matSuffix [for]="pickerHireDate"></mat-datepicker-toggle>
-              <mat-datepicker #pickerHireDate></mat-datepicker>
-            </mat-form-field>
+          <mat-form-field>
+            <input matInput
+                   [ngModel]="currentEmployee?.hireDate"
+                   (ngModelChange)="currentEmployee.hireDate = $event"
+                   [matDatepicker]="pickerHireDate"
+                   name="hireDate"
+                   formControlName="hireDateFormControl"
+                   placeholder="Hire Date">
+            <mat-error *ngIf="hireDateFormControl.invalid">
+              Hire Date is <strong>required</strong>
+            </mat-error>
+            <mat-datepicker-toggle matSuffix [for]="pickerHireDate"></mat-datepicker-toggle>
+            <mat-datepicker #pickerHireDate></mat-datepicker>
+          </mat-form-field>
 
-            <mat-slide-toggle [ngModel]="currentEmployee?.status"
-                              (ngModelChange)="currentEmployee.status = $event"
-                              [disabled]="view == views.view"
-                              name="status"
-                              labelPosition="before"
-                              class="status">Status</mat-slide-toggle>
-          </div>
+          <mat-slide-toggle [ngModel]="currentEmployee?.status"
+                            (ngModelChange)="currentEmployee.status = $event"
+                            name="status"
+                            formControlName="statusFormControl"
+                            labelPosition="before"
+                            class="status">Status</mat-slide-toggle>
+        </div>
 
-          <div class="col-md-6 inputs-container">
+        <div class="col-md-6 inputs-container">
 
-            <mat-button-toggle-group [ngModel]="currentEmployee?.area"
-                                     (ngModelChange)="currentEmployee.area = $event"
-                                     [disabled]="view == views.view"
-                                     name="area"
-                                     class="area">
-              <mat-button-toggle *ngFor="let area of areas" [value]="area">{{area.name}}</mat-button-toggle>
-            </mat-button-toggle-group>
+          <mat-button-toggle-group [ngModel]="currentEmployee?.area"
+                                   (ngModelChange)="currentEmployee.area = $event"
+                                   [ngModelOptions]="{standalone: true}"
+                                   [disabled]="view == views.view"
+                                   name="area"
+                                   class="area">
+            <mat-button-toggle *ngFor="let area of areas" [value]="area">{{area.name}}</mat-button-toggle>
+          </mat-button-toggle-group>
 
-            <app-job-title-child [area]="currentEmployee?.area"
-                                 [job_title]="currentEmployee?.jobTitle"
-                                 [disabled]="view == views.view"
-                                 (selectJobTitle)="selectJobTitleParent($event)"
-                                 class="job-title">
-            </app-job-title-child>
+          <app-job-title-child [area]="currentEmployee?.area"
+                               [job_title]="currentEmployee?.jobTitle"
+                               [disabled]="view == views.view"
+                               (selectJobTitle)="selectJobTitleParent($event)"
+                               class="job-title">
+          </app-job-title-child>
 
-            <mat-form-field *ngIf="currentEmployee?.jobTitle?.id == jobsTitleEnum.waitress.valueOf() ||
+          <mat-form-field *ngIf="currentEmployee?.jobTitle?.id == jobsTitleEnum.waitress.valueOf() ||
                           currentEmployee?.jobTitle?.id == jobsTitleEnum.dining.valueOf()"
-                            class="tip-rate">
-              <input matInput
-                     [ngModel]="currentEmployee?.tipRate"
-                     (ngModelChange)="currentEmployee.tipRate = $event"
-                     [disabled]="view == views.view"
-                     
-                     name="tipRate"
-                     placeholder="Tip Rate">
-              <!--formControlName="tipRateFormControl"-->
-              <!--<mat-error *ngIf="f.tipRateFormControl.invalid">
-                Tip Rate is <strong>required</strong>
-              </mat-error>-->
-            </mat-form-field>
-
-          </div>
+                          class="tip-rate">
+            <input matInput
+                   [ngModel]="currentEmployee?.tipRate"
+                   (ngModelChange)="currentEmployee.tipRate = $event"
+                   [disabled]="view == views.view"
+                   name="tipRate"
+                   placeholder="Tip Rate">
+          </mat-form-field>
 
         </div>
 
       </div>
-      <div class="buttons">
-        <button mat-button (click)="back()" class="button">
-          <i class="fa fa-angle-left fa-lg action"></i>
-          Back
-        </button>
 
-        <button mat-stroked-button
-                *ngIf="view != views.view"
-                (click)="save()"
-  
-                class="button">
-          Save
-        </button>
-      </div>
-    <!--</form>-->
-  </div>
+    </div>
+    <div class="buttons">
+      <button mat-button (click)="back()" type="button" class="button">
+        <i class="fa fa-angle-left fa-lg action"></i>
+        Back
+      </button>
+      <button mat-stroked-button
+              *ngIf="view != views.view"
+              [disabled]="userForm.invalid"
+              type="submit"
+              class="button">
+        Save
+      </button>
+    </div>
+  </form>
 </div>
+
 
 
