--- a/src/app/ui/dialog-confirm/dialog-confirm.component.html
+++ b/src/app/ui/dialog-confirm/dialog-confirm.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Warning!</h1>
 <div mat-dialog-content>
   <p>Are you sure you want to delete this employee?</p>
-  <h5>{{data.name}} ?</h5>
+  <h5>{{data.name}}</h5>
 </div>
 <div mat-dialog-actions>
   <button mat-button
