--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom">
+<nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom fixed">
   <div class="navbar-expand m-auto navbar-text">
     Made with <i class="fa fa-heart"></i> by <a href="https://www.facebook.com/cristiancamiloperezlopez" target="_blank">Cristian</a>
   </div>
