--- a/src/app/ui/some-user/some-user.component.css
+++ b/src/app/ui/some-user/some-user.component.css
@@ -34,6 +34,10 @@
   margin-bottom: 20px;
 }
 
+.form {
+      width: 100%;
+}
+
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 
   .job-title {
