--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,11 @@
   margin-right: 10px !important;
   margin-left: 10px !important;
 }
+
+.container {
+  margin-top: -20px;
+}
+
+.fixed {
+  /*position: sticky;*/
+}
