--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-
 @import "~ng-snotify/styles/material.css";
 
 .link {
@@ -18,6 +17,6 @@
   margin-left: 10px !important;
 }
 
-.container {
-  margin-top: -20px;
+body {
+  min-height: 900px;
 }
